<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222831"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    tools:ignore="MissingDefaultResource"
    >

  <TextView
      android:id="@+id/mainHeader"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="Bicycle Finder"
      android:layout_marginTop="25dp"
      android:textAlignment="center"
      android:textAppearance="@style/TextAppearance.AppCompat.Display1"
      android:textColor="#FFFFFF"
      android:textSize="40dp"
      android:fontFamily="sans-serif-thin"
      />

  <TextView
      android:id="@+id/mainSubHeader"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="Login"
      android:layout_marginTop="75dp"
      android:textAlignment="center"
      android:textAppearance="@style/TextAppearance.AppCompat.Display1"
      android:textColor="#FFFFFF"
      android:textSize="30dp"
      />

  <EditText
      android:id="@+id/mainEmailEditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:layout_marginStart="30dp"
      android:layout_marginEnd="30dp"
      android:width="250dp"
      android:hint="Email"
      android:padding="15dp"
      android:textColor="#FFFFFF"
      android:inputType="textEmailAddress"
      />

  <EditText
      android:id="@+id/mainPasswordEditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="30dp"
      android:layout_marginEnd="30dp"
      android:width="250dp"
      android:hint="Password"
      android:padding="15dp"
      android:textColor="#FFFFFF"
      android:inputType="textPassword"
      />

  <Button
      android:id="@+id/mainLoginButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="30dp"
      android:layout_marginEnd="30dp"
      android:layout_marginTop="10dp"
      android:text="Login"
      android:onClick="LoginUserClick"
    />

  <Button
      android:id="@+id/mainLoginButtonAUTO"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="30dp"
      android:layout_marginEnd="30dp"
      android:layout_marginTop="10dp"
      android:text="Login Auto"
      android:onClick="LoginUserClickAUTO"
      />

  <TextView
      android:id="@+id/mainMessageTextView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="30dp"
      android:layout_marginEnd="30dp"
      android:textColor="#FFFFFF"
      />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="Ny bruger?"
      android:layout_marginTop="100dp"
      android:textAlignment="center"
      android:textAppearance="@style/TextAppearance.AppCompat.Display1"
      android:textColor="#FFFFFF"
      android:textSize="30dp"
      />

  <Button
      android:id="@+id/mainRegisterButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="30dp"
      android:layout_marginEnd="30dp"
      android:layout_marginTop="10dp"
      android:text="Registrér dig her!"
      android:onClick="mainRegisterButtonClick"
      />
</LinearLayout>