...
    android:background="#222831"
    android:orientation="vertical"
    tools:context=".UserLoggedInActivity"
    >

    <TextView
        android:id="@+id/loggedInHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Oversigt over cykler"
        android:layout_marginTop="25dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        android:textSize="25dp"
        />
...
